[ios] Fixes History popup crash and navigation list.

Adds a viewController property to historyPopupCoordinator, even though
its not used (because historyPopup is still "boxed"), its needed for
BrowserCoordinator (its super class).

It also fixes the History popup bug, where the navigation list wasn't
being updated. 

Bug: 766930
Change-Id: I24ab75fc55ef57900eba518c5c248a5b14e935d8
Reviewed-on: https://chromium-review.googlesource.com/674927
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503124}
Former-commit-id: a07a41ca9b61c1c5f5e2b5300ee3631922d31361